src/objects/DRE__DTE_Data_Set__c.object
<CustomObject>
    <customHelpPage>DRE__DREHelp</customHelpPage>
    <fields>
        <fullName>DRE__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRE__Uid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DRE__Validation_Result__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Validation Result</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <label>DTE Test Macro</label>
    <listViews>
        <fullName>DRE__All</fullName>
        <columns>NAME</columns>
        <columns>DRE__Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Operation Bundle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DTE Test Macros</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>